# NeuralNetwork

./: CMakeLists.txt  README.md
NeuralNetwork/: CMakeLists.txt  NeuralNetwork.cpp  NeuralNetwork.h
NeuralNetwork/Headers/: LSTM.cpp  LSTM.h  SelfAttention.cpp  SelfAttention.h  TextProcessing.cpp  TextProcessing.h
